--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,19 @@
-# Setup base image
+# 设置基础镜像
 FROM ubuntu:jammy-20240627.1 AS base
 
-# Build arguments
+# 构建参数
 ARG ARG_UID=1000
 ARG ARG_GID=1000
 
+# 针对 arm64 架构的构建阶段
 FROM base AS build-arm64
-RUN echo "Preparing build of AnythingLLM image for arm64 architecture"
+RUN echo "为 arm64 架构准备 depression-rag 镜像的构建"
 
+# 使用 bash shell 并开启管道失败即失败的选项
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Install system dependencies
-# hadolint ignore=DL3008,DL3013
+# 安装系统依赖
+# hadolint 忽略规则：DL3008, DL3013
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends \
         unzip curl gnupg libgfortran5 libgbm1 tzdata netcat \
@@ -24,40 +26,38 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
     echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
     apt-get update && \
-    # Install node and yarn
+    # 安装 Node.js 和 Yarn
     apt-get install -yq --no-install-recommends nodejs && \
     curl -LO https://github.com/yarnpkg/yarn/releases/download/v1.22.19/yarn_1.22.19_all.deb \
         && dpkg -i yarn_1.22.19_all.deb \
         && rm yarn_1.22.19_all.deb && \
-    # Install uvx (pinned to 0.6.10) for MCP support
+    # 安装 uvx（锁定版本 0.6.10）以支持 MCP
     curl -LsSf https://astral.sh/uv/0.6.10/install.sh | sh && \
         mv /root/.local/bin/uv /usr/local/bin/uv && \
         mv /root/.local/bin/uvx /usr/local/bin/uvx && \
-        echo "Installed uvx! $(uv --version)" && \
+        echo "已安装 uvx! $(uv --version)" && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Create a group and user with specific UID and GID
-RUN groupadd -g "$ARG_GID" anythingllm && \
-    useradd -l -u "$ARG_UID" -m -d /app -s /bin/bash -g anythingllm anythingllm && \
-    mkdir -p /app/frontend/ /app/server/ /app/collector/ && chown -R anythingllm:anythingllm /app
+# 创建具有指定 UID 和 GID 的用户和用户组
+RUN groupadd -g "$ARG_GID" depression-rag && \
+    useradd -l -u "$ARG_UID" -m -d /app -s /bin/bash -g depression-rag depression-rag && \
+    mkdir -p /app/frontend/ /app/server/ /app/collector/ && chown -R depression-rag:depression-rag /app
 
-# Copy docker helper scripts
+# 复制 Docker 辅助脚本
 COPY ./docker/docker-entrypoint.sh /usr/local/bin/
 COPY ./docker/docker-healthcheck.sh /usr/local/bin/
-COPY --chown=anythingllm:anythingllm ./docker/.env.example /app/server/.env
+COPY --chown=depression-rag:depression-rag ./docker/.env.example /app/server/.env
 
-# Ensure the scripts are executable
+# 确保脚本可执行
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh && \
     chmod +x /usr/local/bin/docker-healthcheck.sh
 
-USER anythingllm
+USER depression-rag
 WORKDIR /app
 
-# Puppeteer does not ship with an ARM86 compatible build for Chromium
-# so web-scraping would be broken in arm docker containers unless we patch it
-# by manually installing a compatible chromedriver.
-RUN echo "Need to patch Puppeteer x Chromium support for ARM86 - installing dep!" && \
+# Puppeteer 不支持 ARM86 架构的 Chromium 构建，需要手动安装兼容版本
+RUN echo "为 ARM86 修补 Puppeteer 与 Chromium 支持 - 正在安装依赖!" && \
     curl https://playwright.azureedge.net/builds/chromium/1088/chromium-linux-arm64.zip -o chrome-linux.zip && \
     unzip chrome-linux.zip && \
     rm -rf chrome-linux.zip
@@ -66,18 +66,17 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 ENV CHROME_PATH=/app/chrome-linux/chrome
 ENV PUPPETEER_EXECUTABLE_PATH=/app/chrome-linux/chrome
 
-RUN echo "Done running arm64 specific installation steps"
+RUN echo "完成 arm64 架构专属安装步骤"
 
 #############################################
 
-# amd64-specific stage
+# 针对 amd64 架构的构建阶段
 FROM base AS build-amd64
-RUN echo "Preparing build of AnythingLLM image for non-ARM architecture"
+RUN echo "为非 ARM 架构准备 depression-rag 镜像的构建"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Install system dependencies
-# hadolint ignore=DL3008,DL3013
+# 安装系统依赖（同 arm64）
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends \
         curl gnupg libgfortran5 libgbm1 tzdata netcat \
@@ -90,47 +89,45 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
     echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
     apt-get update && \
-    # Install node and yarn
     apt-get install -yq --no-install-recommends nodejs && \
     curl -LO https://github.com/yarnpkg/yarn/releases/download/v1.22.19/yarn_1.22.19_all.deb \
         && dpkg -i yarn_1.22.19_all.deb \
         && rm yarn_1.22.19_all.deb && \
-    # Install uvx (pinned to 0.6.10) for MCP support
     curl -LsSf https://astral.sh/uv/0.6.10/install.sh | sh && \
         mv /root/.local/bin/uv /usr/local/bin/uv && \
         mv /root/.local/bin/uvx /usr/local/bin/uvx && \
-        echo "Installed uvx! $(uv --version)" && \
+        echo "已安装 uvx! $(uv --version)" && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Create a group and user with specific UID and GID
-RUN groupadd -g "$ARG_GID" anythingllm && \
-    useradd -l -u "$ARG_UID" -m -d /app -s /bin/bash -g anythingllm anythingllm && \
-    mkdir -p /app/frontend/ /app/server/ /app/collector/ && chown -R anythingllm:anythingllm /app
+# 创建用户
+RUN groupadd -g "$ARG_GID" depression-rag && \
+    useradd -l -u "$ARG_UID" -m -d /app -s /bin/bash -g depression-rag depression-rag && \
+    mkdir -p /app/frontend/ /app/server/ /app/collector/ && chown -R depression-rag:depression-rag /app
 
-# Copy docker helper scripts
+# 拷贝脚本与环境文件
 COPY ./docker/docker-entrypoint.sh /usr/local/bin/
 COPY ./docker/docker-healthcheck.sh /usr/local/bin/
-COPY --chown=anythingllm:anythingllm ./docker/.env.example /app/server/.env
+COPY --chown=depression-rag:depression-rag ./docker/.env.example /app/server/.env
 
-# Ensure the scripts are executable
+# 设置脚本权限
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh && \
     chmod +x /usr/local/bin/docker-healthcheck.sh
 
 #############################################
-# COMMON BUILD FLOW FOR ALL ARCHS
+# 所有架构通用的构建流程
 #############################################
 
-# hadolint ignore=DL3006
+# hadolint 忽略规则：DL3006
 FROM build-${TARGETARCH} AS build
-RUN echo "Running common build flow of AnythingLLM image for all architectures"
+RUN echo "执行适用于所有架构的 depression-rag 镜像通用构建流程"
 
-USER anythingllm
+USER depression-rag
 WORKDIR /app
 
-# Install & Build frontend layer
+# 安装并构建前端层
 FROM build AS frontend-build
-COPY --chown=anythingllm:anythingllm ./frontend /app/frontend/
+COPY --chown=depression-rag:depression-rag ./frontend /app/frontend/
 WORKDIR /app/frontend
 RUN yarn install --network-timeout 100000 && yarn cache clean
 RUN yarn build && \
@@ -140,40 +137,39 @@ RUN yarn build && \
     rm -rf /tmp/frontend-build
 WORKDIR /app
 
-# Install server layer
-# Also pull and build collector deps (chromium issues prevent bad bindings)
+# 安装后端（服务器）代码及依赖
 FROM build AS backend-build
-COPY --chown=anythingllm:anythingllm ./server /app/server/
+COPY --chown=depression-rag:depression-rag ./server /app/server/
 WORKDIR /app/server
 RUN yarn install --production --network-timeout 100000 && yarn cache clean
 WORKDIR /app
 
-# Install collector dependencies
-COPY --chown=anythingllm:anythingllm ./collector/ ./collector/
+# 安装 collector 相关依赖
+COPY --chown=depression-rag:depression-rag ./collector/ ./collector/
 WORKDIR /app/collector
 ENV PUPPETEER_DOWNLOAD_BASE_URL=https://storage.googleapis.com/chrome-for-testing-public
 RUN yarn install --production --network-timeout 100000 && yarn cache clean
 
 WORKDIR /app
-USER anythingllm
+USER depression-rag
 
-# Since we are building from backend-build we just need to move built frontend into server/public
+# 构建最终生产镜像，将前端静态文件复制到后端
 FROM backend-build AS production-build
 WORKDIR /app
-COPY --chown=anythingllm:anythingllm --from=frontend-build /app/frontend/dist /app/server/public
+COPY --chown=depression-rag:depression-rag --from=frontend-build /app/frontend/dist /app/server/public
 USER root
-RUN chown -R anythingllm:anythingllm /app/server && \
-    chown -R anythingllm:anythingllm /app/collector
-USER anythingllm
+RUN chown -R depression-rag:depression-rag /app/server && \
+    chown -R depression-rag:depression-rag /app/collector
+USER depression-rag
 
-# Setup the environment
+# 设置环境变量
 ENV NODE_ENV=production
 ENV ANYTHING_LLM_RUNTIME=docker
 
-# Setup the healthcheck
+# 配置健康检查
 HEALTHCHECK --interval=1m --timeout=10s --start-period=1m \
   CMD /bin/bash /usr/local/bin/docker-healthcheck.sh || exit 1
 
-# Run the server
-# CMD ["sh", "-c", "tail -f /dev/null"] # For development: keep container open
+# 启动服务器
+# CMD ["sh", "-c", "tail -f /dev/null"] # 开发模式：保持容器运行
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/docker-entrypoint.sh"]
